--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf1.cfg
@@ -8,6 +8,13 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-leaf1
 !
+sflow vrf MGMT destination 10.10.10.10
+sflow vrf MGMT destination 10.10.10.11
+sflow vrf MGMT source-interface Management1
+sflow vrf sflowvrf destination 10.10.10.12 1234
+sflow vrf sflowvrf source-interface Loopback321
+sflow run
+!
 spanning-tree mode mstp
 spanning-tree mst 0 priority 4096
 !
@@ -89,6 +96,8 @@ interface Vxlan1
    vxlan udp-port 4789
    vxlan vlan 11 vni 10011
    vxlan vrf VRF1 vni 1
+!
+ip virtual-router mac-address 00:11:22:33:44:55
 !
 ip routing
 no ip routing vrf MGMT
