--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-leaf3.cfg
@@ -8,6 +8,13 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-leaf3
 !
+sflow vrf MGMT destination 10.10.10.10
+sflow vrf MGMT destination 10.10.10.11
+sflow vrf MGMT source-interface Management1
+sflow vrf sflowvrf destination 10.10.10.12 1234
+sflow vrf sflowvrf source-interface Loopback321
+sflow run
+!
 spanning-tree mode mstp
 no spanning-tree vlan-id 4093-4094
 spanning-tree mst 0 priority 4096
@@ -21,6 +28,9 @@ vlan 11
 vlan 3000
    name MLAG_iBGP_VRF1
    trunk group LEAF_PEER_L3
+!
+vlan 4092
+   name INBAND_MGMT
 !
 vlan 4093
    name LEAF_PEER_L3
@@ -67,7 +77,7 @@ interface Port-Channel16
    description SFLOW-TESTS-L2-LEAF1_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 11
+   switchport trunk allowed vlan 11,4092
    switchport mode trunk
    mlag 16
    sflow enable
@@ -76,7 +86,7 @@ interface Port-Channel17
    description SFLOW-TESTS-L2-LEAF2_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 11
+   switchport trunk allowed vlan 11,4092
    switchport mode trunk
    mlag 17
    sflow enable
@@ -155,6 +165,14 @@ interface Vlan3000
    vrf VRF1
    ip address 10.254.1.104/31
 !
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 10.254.254.2/24
+   ip attached-host route export 19
+   ip virtual-router address 10.254.254.1
+!
 interface Vlan4093
    description MLAG_PEER_L3_PEERING
    no shutdown
@@ -176,9 +194,14 @@ interface Vxlan1
    vxlan vlan 11 vni 10011
    vxlan vrf VRF1 vni 1
 !
+ip virtual-router mac-address 00:11:22:33:44:55
+!
 ip routing
 no ip routing vrf MGMT
 ip routing vrf VRF1
+!
+ip prefix-list PL-L2LEAF-INBAND-MGMT
+   seq 10 permit 10.254.254.0/24
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 10.254.1.0/27 eq 32
@@ -196,6 +219,9 @@ ip route vrf MGMT 0.0.0.0/0 192.168.0.1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+!
+route-map RM-CONN-2-BGP permit 20
+   match ip address prefix-list PL-L2LEAF-INBAND-MGMT
 !
 route-map RM-MLAG-PEER-IN permit 10
    description Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
@@ -235,6 +261,7 @@ router bgp 65105
    neighbor 10.255.0.1 peer group EVPN-OVERLAY-PEERS
    neighbor 10.255.0.1 remote-as 65200
    neighbor 10.255.0.1 description sflow-tests-spine1
+   redistribute attached-host
    redistribute connected route-map RM-CONN-2-BGP
    !
    vlan 11
