--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1198,6 +1198,35 @@ keys:
       in the Fabric, **must** be an inventory group name.
     type: str
     required: true
+  fabric_sflow:
+    documentation_options:
+      table: management-sflow-settings
+    type: dict
+    description: 'Default enabling of sFlow for various interface types across the
+      fabric.
+
+      sFlow can also be enabled/disabled under each of the specific data models.
+
+      For general sFlow settings see `sflow_settings`.'
+    keys:
+      uplinks:
+        description: Enable sFlow on all fabric uplinks.
+        type: bool
+      downlinks:
+        description: Enable sFlow on all fabric downlinks.
+        type: bool
+      endpoints:
+        description: Enable sFlow on all endpoints ports.
+        type: bool
+      l3_edge:
+        description: Enable sFlow on all p2p_links defined under l3_edge.
+        type: bool
+      core_interfaces:
+        description: Enable sFlow on all p2p_links defined under core_interfaces.
+        type: bool
+      mlag_interfaces:
+        description: Enable sFlow on all MLAG peer interfaces.
+        type: bool
   flow_tracking_settings:
     description: Define the flow tracking parameters for this topology.
     type: dict
@@ -2845,6 +2874,67 @@ keys:
     type: str
     convert_types:
     - int
+  sflow_settings:
+    documentation_options:
+      table: management-sflow-settings
+    type: dict
+    description: 'sFlow settings.
+
+      The sFlow process will only be configured if any interface is enabled for sFlow.
+
+      For default enabling of sFlow for various interface types across the fabric
+      see `fabric_sflow`.'
+    keys:
+      destinations:
+        type: list
+        items:
+          type: dict
+          keys:
+            destination:
+              type: str
+              required: true
+              description: sFlow destination name or IP address.
+            port:
+              type: int
+              description: UDP Port number. The default port number for sFlow is 6343.
+              convert_types:
+              - str
+              min: 1
+              max: 65535
+            vrf:
+              type: str
+              description: "If not set, the VRF is automatically picked up from the
+                global setting `default_mgmt_method`.\nThe value of `vrf` will be
+                interpreted according to these rules:\n- `use_mgmt_interface_vrf`
+                will configure the sFlow destination under the VRF set with `mgmt_interface_vrf`
+                and set the `mgmt_interface` as sFlow source-interface.\n  An error
+                will be raised if `mgmt_ip` or `ipv6_mgmt_ip` are not configured for
+                the device.\n- `use_inband_mgmt_vrf` will configure the sFlow destination
+                under the VRF set with `inband_mgmt_vrf` and set the `inband_mgmt_interface`
+                as sFlow source-interface.\n  An error will be raised if inband management
+                is not configured for the device.\n- Any other string will be used
+                directly as the VRF name. Remember to set the `sflow_settings.vrfs[].source_interface`
+                if needed."
+              convert_types:
+              - int
+      vrfs:
+        type: list
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+              convert_types:
+              - int
+              description: VRF name.
+            source_interface:
+              type: str
+              description: 'Source interface to use for sFlow destinations in this
+                VRF.
+
+                If set for the VRFs defined by `mgmt_interface_vrf` or `inband_mgmt_vrf`,
+                this setting will take precedence.'
   shutdown_interfaces_towards_undeployed_peers:
     documentation_options:
       table: fabric-settings
