--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3627,6 +3627,11 @@ keys:
           type: str
           description: The path-group to which this carrier belongs.
           required: true
+        trusted:
+          type: bool
+          default: false
+          description: WAN interfaces will require an inbound Access-list to be set,
+            unless the provider is "trusted".
   wan_edge:
     documentation_options:
       table: wan-settings
@@ -8150,7 +8155,8 @@ $defs:
 
             The access-list must be defined under `ipv4_acls`.
 
-            Required for WAN interfaces (`wan_carrier` is set).'
+            Required for all WAN interfaces (`wan_carrier` is set) unless the Carrier
+            is marked as ''trusted'' under `wan_carriers`.'
           type: str
           convert_types:
           - int
@@ -8183,8 +8189,8 @@ $defs:
             This is used to infer the path-groups in which this interface should be
             configured.
 
-            When setting this, `ipv4_acl_in` is also required, to ensure a secure
-            configuration.'
+            Unless the Carrier is marked as ''trusted'' under `wan_carriers`, `ipv4_acl_in`
+            is also required on all WAN interfaces.'
         wan_circuit_id:
           type: str
           convert_types:
