--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -79,9 +79,9 @@ $defs:
             The peer device IPv4 address (no mask). Used as default route gateway if `set_default_route` is true and `ip` is an IP address.
         ipv4_acl_in:
           description: |-
-            Name of the IPv4 Access-list to be assigned in the ingress direction.
+            Name of the IPv4 access-list to be assigned in the ingress direction.
             The access-list must be defined under `ipv4_acls`.
-            Required for all WAN interfaces (`wan_carrier` is set) unless the Carrier is marked as 'trusted' under `wan_carriers`.
+            Required for all WAN interfaces (`wan_carrier` is set) unless the carrier is marked as 'trusted' under `wan_carriers`.
           type: str
           convert_types:
             - int
@@ -109,15 +109,15 @@ $defs:
         wan_carrier:
           type: str
           description: |-
-            The WAN Carrier this interface is connected to.
+            The WAN carrier this interface is connected to.
             This is used to infer the path-groups in which this interface should be configured.
-            Unless the Carrier is marked as 'trusted' under `wan_carriers`, `ipv4_acl_in` is also required on all WAN interfaces.
+            Unless the carrier is marked as 'trusted' under `wan_carriers`, `ipv4_acl_in` is also required on all WAN interfaces.
         wan_circuit_id:
           type: str
           convert_types:
             - int
           description: |-
-            The WAN Circuit ID for this interface.
+            The WAN circuit ID for this interface.
             This is not rendered in the configuration but used for WAN designs.
         connected_to_pathfinder:
           type: bool
