Changed downlink_ipv4_pool to ipv4_pool

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/group_vars/fabric_downlink_pools_duplicate.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/group_vars/fabric_downlink_pools_duplicate.yml
@@ -16,7 +16,7 @@ spine:
   nodes:
     - name: downlink-pools-duplicate-spine
       downlink_pools:
-        - downlink_ipv4_pool: 10.0.2.0/24
+        - ipv4_pool: 10.0.2.0/24
           downlink_interfaces: [Ethernet3]
       id: 10
 
