--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -336,7 +336,7 @@ $defs:
             items:
               type: dict
               keys:
-                downlink_ipv4_pool:
+                ipv4_pool:
                   type: str
                   format: ipv4_cidr
                   description: IPv4 pool from which subnets will be allocated for links to downlink switches.
