--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/match_list_input.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/match_list_input.schema.yml
@@ -10,6 +10,38 @@ keys:
     type: dict
     display_name: Match Lists
     keys:
+      prefix_ipv4:
+        type: list
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name: 
+              type: str
+              description: Prefix-List Name
+            prefixes:
+              type: list
+              required: true
+              description: List of IPv4 Prefixes (with the subnet mask e.g. 10.10.10.0/24)
+              items:
+                type: str
+
+      prefix_ipv6:
+        type: list
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name: 
+              type: str
+              description: Prefix-List Name
+            prefixes:
+              type: list
+              required: true
+              description: List of IPv6 Prefixes (with the subnet mask e.g. 2001:db8:abcd:0013::/64)
+              items:
+                type: str
+
       string:
         type: list
         primary_key: name
