Update molecule tests

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/match-lists.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/match-lists.yml
@@ -1,4 +1,13 @@
 match_list_input:
+  prefix_ipv4:
+    - name: molecule_v4
+      prefixes:
+        - 10.10.10.0/24
+        - 10.10.20.0/24
+  prefix_ipv6:
+    - name: molecule_v6
+      prefixes:
+        - 2001:0DB8::/32
   string:
     - name: molecule
       sequence_numbers:
