Feat(eos_cli_config_gen): Add support for switchport port-security. (#3561)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -19,6 +19,7 @@ interface Ethernet1
    ip verify unicast source reachable-via rx
    bfd interval 500 min-rx 500 multiplier 5
    bfd echo
+   switchport port-security
    priority-flow-control on
    priority-flow-control priority 5 drop
    link tracking group EVPN_MH_ES1 upstream
@@ -35,6 +36,8 @@ interface Ethernet2
    multicast ipv4 boundary ACL_MULTICAST
    multicast ipv6 boundary ACL_V6_MULTICAST out
    multicast ipv4 static
+   switchport port-security violation protect log
+   switchport port-security mac-address maximum 100
    priority-flow-control on
    priority-flow-control priority 5 no-drop
    storm-control all level 10
@@ -54,6 +57,12 @@ interface Ethernet3
    ipv6 nd prefix 2345:ABCD:3FE0::1/96 infinite 50 no-autoconfig
    ipv6 nd prefix 2345:ABCD:3FE0::2/96 50 infinite
    ipv6 nd prefix 2345:ABCD:3FE0::3/96 100000 no-autoconfig
+   switchport port-security
+   no switchport port-security mac-address maximum disabled
+   switchport port-security vlan 1 mac-address maximum 3
+   switchport port-security vlan 2 mac-address maximum 3
+   switchport port-security vlan 3 mac-address maximum 3
+   switchport port-security vlan default mac-address maximum 2
    no priority-flow-control
    spanning-tree guard root
    link tracking group EVPN_MH_ES2 downstream
