--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -29,6 +29,9 @@ ethernet_interfaces:
     bgp:
       session_tracker: ST1
     ip_verify_unicast_source_reachable_via: rx
+    switchport:
+      port_security:
+        enabled: true
     eos_cli: |
       comment
       Comment created from eos_cli under ethernet_interfaces.Ethernet1
@@ -66,6 +69,13 @@ ethernet_interfaces:
           no_drop: true
     spanning_tree_bpduguard: disabled
     spanning_tree_bpdufilter: disabled
+    switchport:
+      port_security:
+        mac_address_maximum:
+          limit: 100
+        violation:
+          mode: protect
+          protect_log: true
 
   - name: Ethernet3
     peer: DC1-SPINE2
@@ -96,6 +106,16 @@ ethernet_interfaces:
     priority_flow_control:
       enabled: false
     spanning_tree_guard: root
+    switchport:
+      port_security:
+        mac_address_maximum:
+          disabled: false
+        violation:
+          mode: shutdown
+        vlan_default_mac_address_maximum: 2
+        vlans:
+          - range: 1-3
+            mac_address_maximum: 3
 
   - name: Ethernet4
     type: routed
