--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -1271,6 +1271,68 @@ keys:
         validate_state:
           type: bool
           description: Set to false to disable interface validation by the `eos_validate_state` role
+        switchport:
+          type: dict
+          keys:
+            port_security:
+              type: dict
+              keys:
+                enabled:
+                  type: bool
+                mac_address_maximum:
+                  type: dict
+                  description: Maximum number of MAC addresses allowed on the interface.
+                  keys:
+                    disabled:
+                      type: bool
+                      description: Disable port level check for port security (only in violation 'shutdown' mode).
+                    limit:
+                      type: int
+                      convert_types:
+                        - str
+                      min: 1
+                      max: 1000
+                      description: MAC address limit.
+                violation:
+                  type: dict
+                  description: Configure violation mode (shutdown or protect), EOS default is 'shutdown'.
+                  keys:
+                    mode:
+                      type: str
+                      valid_values:
+                        - shutdown
+                        - protect
+                      description: Configure port security mode.
+                    protect_log:
+                      type: bool
+                      description: Log new addresses seen after limit is reached in protect mode.
+                vlan_default_mac_address_maximum:
+                  type: int
+                  convert_types:
+                    - str
+                  min: 0
+                  max: 1000
+                  description: Default maximum MAC addresses for all VLANs on this interface.
+                vlans:
+                  type: list
+                  primary_key: range
+                  items:
+                    type: dict
+                    keys:
+                      range:
+                        type: str
+                        convert_types:
+                          - int
+                        description: |
+                          VLAN ID or range(s) of VLAN IDs, <1-4094>.
+                          Example:
+                            - 3
+                            - 1,3
+                            - 1-10
+                      mac_address_maximum:
+                        type: int
+                        convert_types:
+                          - str
         eos_cli:
           type: str
           description: Multiline EOS CLI rendered directly on the ethernet interface in the final EOS configuration
