Fix(eos_designs): Make interface_tags.[].name and device_tags.[].name case sensitive

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1291,9 +1291,7 @@ keys:
             sourced from structured configuration.
           keys:
             name:
-              description: Tag name to be assigned to generated tags. Tag names must
-                be lower case.
-              convert_to_lower_case: true
+              description: Tag name to be assigned to generated tags.
               required: true
               type: str
             data_path:
@@ -1319,9 +1317,7 @@ keys:
             sourced from structured configuration.
           keys:
             name:
-              description: Tag name to be assigned to generated tags. Tag names must
-                be lower case.
-              convert_to_lower_case: true
+              description: Tag name to be assigned to generated tags.
               required: true
               type: str
             data_path:
