--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/generate_cv_tags.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/generate_cv_tags.schema.yml
@@ -27,8 +27,7 @@ keys:
           description: Each tag can either have a static value or a dynamic value sourced from structured configuration.
           keys:
             name:
-              description: Tag name to be assigned to generated tags. Tag names must be lower case.
-              convert_to_lower_case: true
+              description: Tag name to be assigned to generated tags.
               required: true
               type: str
             data_path:
@@ -48,8 +47,7 @@ keys:
           description: Each tag can either have a static value or a dynamic value sourced from structured configuration.
           keys:
             name:
-              description: Tag name to be assigned to generated tags. Tag names must be lower case.
-              convert_to_lower_case: true
+              description: Tag name to be assigned to generated tags.
               required: true
               type: str
             data_path:
