--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -121,6 +121,8 @@ wan_router:
       uplink_type: p2p-vrfs
       uplink_switches: [ site-ha-enabled-leaf2A, site-ha-enabled-leaf2B ]
       uplink_interfaces: [ Ethernet52, Ethernet53 ]
+      wan_ha:
+        enabled: true # TODO AVD4.8.0: Remove once WAN HA is GA.
       nodes:
         - name: cv-pathfinder-edge2A
           id: 2
@@ -153,6 +155,7 @@ wan_router:
       cv_pathfinder_transit_mode: region
       # Disable HA IPsec
       wan_ha:
+        enabled: true # TODO AVD4.8.0: Remove once WAN HA is GA.
         ipsec: false
       nodes:
         - name: cv-pathfinder-transit1A
