--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/metadata.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/metadata.schema.yml
@@ -163,6 +163,8 @@ keys:
                             type: int
                           lossrate:
                             type: str
+                            convert_types:
+                              - float
                       description:
                         type: str
                       id:
