--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -8008,7 +8008,11 @@ $defs:
             description: 'PREVIEW: This key is currently not supported
 
 
-              The CV Pathfinder region name.'
+              The CV Pathfinder region name.
+
+              This key is required for WAN routers but optional for pathfinders.
+
+              The region name must be defined under ''cv_pathfinder_regions''.'
           cv_pathfinder_site:
             documentation_options:
               table: node-type-wan-configuration
@@ -8016,7 +8020,11 @@ $defs:
             description: 'PREVIEW: This key is currently not supported
 
 
-              The CV Pathfinder site name.'
+              The CV Pathfinder site name.
+
+              This key is required for WAN routers but ignored for pathfinders.
+
+              The site name must be defined for the relevant region under ''cv_pathfinder_regions''.'
           wan_ha:
             documentation_options:
               table: node-type-wan-configuration
