--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6093,11 +6093,12 @@ keys:
           keys:
             name:
               type: str
-              description: Prefix-List Name
+              description: Prefix-List Name.
             prefixes:
               type: list
               required: true
-              description: List of IPv4 Prefixes (with the subnet mask e.g. 10.10.10.0/24)
+              min_length: 1
+              description: List of IPv4 prefixes (with the subnet mask e.g. 192.0.2.0/24).
               items:
                 type: str
       prefix_ipv6:
@@ -6108,11 +6109,12 @@ keys:
           keys:
             name:
               type: str
-              description: Prefix-List Name
+              description: Prefix-List Name.
             prefixes:
               type: list
               required: true
-              description: List of IPv6 Prefixes (with the subnet mask e.g. 2001:db8:abcd:0013::/64)
+              min_length: 1
+              description: List of IPv6 prefixes (with the subnet mask e.g. 2001:db8:abcd:0013::/64).
               items:
                 type: str
       string:
