Refactor(eos_designs): Optional CV Pathfinder region for pathfinders (#3774)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -247,6 +247,7 @@ wan_rr:
           ip_address: 10.8.8.8/31
     - name: cv-pathfinder-pathfinder2
       id: 3
+      cv_pathfinder_region: AVD_Land_East
       data_plane_cpu_allocation_max: 3
       l3_interfaces:
         - name: Ethernet1
