--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -954,7 +954,9 @@ keys:
             '
   config_comment:
     type: str
-    description: Add custom comment to provide configlet information.
+    description: 'Add a comment to provide information about the configuration.
+
+      This comment will be rendered at the top of the generated configuration.'
   custom_templates:
     type: list
     display_name: Extensibility with Custom Templates
