Fixing molecule CI fail

--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/ISIS-SPINE1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/ISIS-SPINE1.cfg
@@ -22,6 +22,7 @@ interface Port-Channel1
    switchport
    switchport trunk allowed vlan 110
    switchport mode trunk
+   isis enable EVPN_UNDERLAY
 !
 interface Ethernet1
    description ISIS-LEAF1_Ethernet1
