--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/ISIS-SPINE1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/ISIS-SPINE1.yml
@@ -55,6 +55,7 @@ port_channel_interfaces:
   shutdown: false
   mode: trunk
   vlans: '110'
+  isis_enable: EVPN_UNDERLAY
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
