--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/connected_endpoints.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/connected_endpoints.cfg
@@ -96,6 +96,18 @@ interface Ethernet13
    channel-group 12 mode active
    spanning-tree portfast
    spanning-tree bpdufilter enable
+!
+interface Ethernet14
+   description DOT1X_UNAUTHORIZED
+   no shutdown
+   switchport trunk native vlan 123
+   switchport trunk allowed vlan 1,2,3,4,5,6,7,123,234
+   switchport mode trunk
+   switchport
+   dot1x unauthorized access vlan membership egress
+   dot1x unauthorized native vlan membership egress
+   spanning-tree portfast
+   spanning-tree bpdufilter enable
 no ip routing vrf MGMT
 !
 management api http-commands
