--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2847,12 +2847,12 @@ keys:
             groups:
               type: list
               primary_key: group
-              description: Group Address.
               items:
                 type: dict
                 keys:
                   group:
                     type: str
+                    description: Multicast Address.
                   exclude:
                     type: list
                     primary_key: source
@@ -2875,7 +2875,6 @@ keys:
               - str
               min: 1
               max: 31744
-              default: 1
               description: Time interval between unsolicited reports.
             access_lists:
               type: list
@@ -2892,7 +2891,6 @@ keys:
               - str
               min: 1
               max: 3
-              default: 3
               description: IGMP version on IGMP host-proxy interface.
         peer:
           type: str
@@ -8101,12 +8099,12 @@ keys:
             groups:
               type: list
               primary_key: group
-              description: Group Address.
               items:
                 type: dict
                 keys:
                   group:
                     type: str
+                    description: Multicast Address.
                   exclude:
                     type: list
                     primary_key: source
@@ -8129,7 +8127,6 @@ keys:
               - str
               min: 1
               max: 31744
-              default: 1
               description: Time interval between unsolicited reports.
             access_lists:
               type: list
@@ -8146,7 +8143,6 @@ keys:
               - str
               min: 1
               max: 3
-              default: 3
               description: IGMP version on IGMP host-proxy interface.
         peer:
           type: str
@@ -15230,12 +15226,12 @@ keys:
             groups:
               type: list
               primary_key: group
-              description: Group Address.
               items:
                 type: dict
                 keys:
                   group:
                     type: str
+                    description: Multicast Address.
                   exclude:
                     type: list
                     primary_key: source
@@ -15258,7 +15254,6 @@ keys:
               - str
               min: 1
               max: 31744
-              default: 1
               description: Time interval between unsolicited reports.
             access_lists:
               type: list
@@ -15275,7 +15270,6 @@ keys:
               - str
               min: 1
               max: 3
-              default: 3
               description: IGMP version on IGMP host-proxy interface.
         ip_helpers:
           type: list
